fixed pop-up content and format & input textbox align

--- a/style.css
+++ b/style.css
@@ -127,27 +127,31 @@ body {
 }
 
 .input_text {
-	padding: 4px 1px 3px 1px;
+	/*padding: 4px 1px 3px 1px;*/
 	text-align: left;
 	margin: auto;
-	width: 50%;
+	width: auto;
+	height: 1.65em;
 	font-family: Arial, Times;
   	font-size:12pt;
 	/*font-weight: bold;*/
 }
 select {
-	padding: 4px 15px 4px 20px;
+	/*padding: 4px 5px 4px 10px;*/
 	margin: auto;
+	/*margin-right: 0.4em;*/
 	width: auto;
+	height: 1.65em;
 	font-family: Arial, Times;
   	font-size:12pt;
 	/*font-weight: bold;*/
 }
 
 .submit {
-  padding: 3px 20px 3px 20px;
-  margin: auto;
-  height: auto;
+  /*padding: 4px 10px 3px 10px;
+  margin: auto;*/
+  margin-left: 0.3em;
+  height: 1.65em;
   font-family: Arial, Times, Courier New;
   font-size:12pt;
   /*font-weight: bold;*/
